Addition of "Sauce" datalist

--- a/index.html
+++ b/index.html
@@ -75,7 +75,18 @@
            <option value="ciabatta">Ciabatta</option>
          </select>
        </section>
+       <hr>
 
+       <section class="sauce-selection">
+					<label for="sauce">What type of sauce would you like?</label>
+          <input list="sauces" id="sauce" name="sauce">
+         <!--Add your code below-->
+          <datalist id="sauces">
+           	<option value="ketchup">Ketchup</option>
+           	<option value="mayo">Mayo</option>
+           	<option value="mustard">Mustard</option>
+          </datalist>
+        </section>
       </form>
 
     </section>
