--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
            	<option value="mustard">Mustard</option>
           </datalist>
         </section>
+
+        <section class="extra-info">
+          <label for="extra">Anything else you want to add?</label>
+          <br>
+          <!--Add your code below-->
+          <textarea id="extra" name="extra" rows="3" cols="40">Please add extras here!
+  </textarea>
+
+        </section>
       </form>
 
     </section>
