--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
           <label for="extra">Anything else you want to add?</label>
           <br>
           <!--Add your code below-->
-          <textarea id="extra" name="extra" rows="3" cols="40">Please add extras here!
-  </textarea>
+          <textarea id="extra" name="extra" rows="3" cols="40">Please add extras
+            here!</textarea>
 
         </section>
       </form>
