Submit button added

--- a/index.html
+++ b/index.html
@@ -92,10 +92,16 @@
           <label for="extra">Anything else you want to add?</label>
           <br>
           <!--Add your code below-->
-          <textarea id="extra" name="extra" rows="3" cols="40">Please add extras
-            here!</textarea>
+          <textarea id="extra" name="extra" rows="3" cols="40">Please add extras here!</textarea>
 
         </section>
+        <hr>
+
+        <section class="submission">
+          <!--Add your code below-->
+          <input type="submit" value="Submit">
+        </section>
+
       </form>
 
     </section>
